force-app/main/default/objects/RTV_RP_Ship_To__c/RTV_RP_Ship_To__c.object-meta.xml
<CustomObject>
    <description>允许回收的Sold-to&amp;Ship-to白名单</description>
    <label>RTV RP Ship To</label>
    <nameField>
        <displayFormat>WL-{0000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTV RP Ship To White List</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>