force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <formula>Summary_Budget__r.Account_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Group</label>
    <type>Text</type>
</CustomField>