force-app/main/default/objects/RTV_RP_Ship_To__c/fields/DTC_Code__c.field-meta.xml
<CustomField>
    <fullName>DTC_Code__c</fullName>
    <label>DTC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>