force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Order_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Auth_Code__c</fullName>
    <label>Order Auth Code</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>