force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Removed__c.field-meta.xml
<CustomField>
    <fullName>Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>删除标记</description>
    <label>Removed</label>
    <type>Checkbox</type>
</CustomField>