force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Return_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Auth_Code__c</fullName>
    <description>Return authorization code</description>
    <formula>Summary_Budget__r.Return_Program__r.Name 
 &amp; &quot;-&quot; &amp;
 Summary_Budget__r.Account_Group__r.Sub_Name__c 
 &amp; &quot;-&quot; &amp;
 Sold_To__r.Name
 &amp; &quot;-&quot; &amp;
 Ship_To__r.Name</formula>
    <label>Return Auth Code</label>
    <type>Text</type>
</CustomField>