force-app/main/default/objects/RTV_RP_Ship_To__c/fields/RTV_Program__c.field-meta.xml
<CustomField>
    <fullName>RTV_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RTV Program</label>
    <referenceTo>RTV_Program__c</referenceTo>
    <relationshipLabel>RTV RP Ship To White List</relationshipLabel>
    <relationshipName>RTV_RP_Ship_Tos</relationshipName>
    <type>Lookup</type>
</CustomField>