force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>关联Ship-to</description>
    <label>Ship-To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RMS_Ship_To__c.Sold_To_Code__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sold_To__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RMS_Ship_To__c</referenceTo>
    <relationshipLabel>RTV RP Ship To List</relationshipLabel>
    <relationshipName>RTV_RP_Ship_To_List</relationshipName>
    <type>Lookup</type>
</CustomField>