force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Ship_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Code__c</fullName>
    <description>DIG场合显示该字段</description>
    <formula>Ship_To__r.Name</formula>
    <label>Ship-To</label>
    <type>Text</type>
</CustomField>