force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <description>Ship-to的名称</description>
    <formula>Ship_To__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship-To Name</label>
    <type>Text</type>
</CustomField>