force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>关联Sold-to</description>
    <label>Sold-To</label>
    <referenceTo>RMS_Sold_To__c</referenceTo>
    <relationshipName>Return_Account_White_List</relationshipName>
    <type>Lookup</type>
</CustomField>