force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Sold_To_Name_CN__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Name_CN__c</fullName>
    <description>Sold-to&apos;s name</description>
    <formula>Sold_To__r.Sold_To_Name_CN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold-To Name(CN)</label>
    <type>Text</type>
</CustomField>