force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Sold_To_Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Name_EN__c</fullName>
    <formula>Sold_To__r.Sold_To_Name_EN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold-To Name(EN)</label>
    <type>Text</type>
</CustomField>