force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Code__c</fullName>
    <formula>Ship_To__r.DTC_Code__c</formula>
    <label>Store</label>
    <type>Text</type>
</CustomField>