force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup RTV Summary</description>
    <label>Summary</label>
    <referenceTo>RTV_Summary__c</referenceTo>
    <relationshipLabel>RTV RP Ship To White List</relationshipLabel>
    <relationshipName>RTV_RP_Ship_To_List</relationshipName>
    <type>Lookup</type>
</CustomField>