force-app/main/default/objects/RTV_RP_Ship_To__c/fields/Summary_Budget__c.field-meta.xml
<CustomField>
    <fullName>Summary_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Summary Budget</description>
    <label>Summary Budget</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RTV_RP_Summary_Budget__c.Return_Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.RTV_Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RTV_RP_Summary_Budget__c</referenceTo>
    <relationshipLabel>RTV RP Ship To White List</relationshipLabel>
    <relationshipName>RTV_RP_Ship_To_List</relationshipName>
    <type>Lookup</type>
</CustomField>